# models/user_basic.go
@@ -4,7 +4,6 @@ import (
 	// "fmt"
 	"ginchat/utils"
 	"time"
-
 	"gorm.io/gorm"
 )
 
@@ -12,8 +11,8 @@ type UserBasic struct {
 	gorm.Model
 	Name          string
 	Password      string
-	Phone         string
-	Email         string
+	Phone         string `valid:"matches(^1[3-9]{1}\\d{9}$)`
+	Email         string `valid:"email"`
 	Identity      string
 	ClientIp      string
 	ClientPort    string
@@ -30,9 +29,26 @@ func (table *UserBasic) TableName() string {
 
 func GetUserList() []*UserBasic {
 	var data []*UserBasic
-
 	utils.DB.Find(&data)
 	return data
+}
+
+func FindUserByName(name string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ?", name).First(&user)
+	return user
+}
+
+func FindUserByPhone(phone string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("phone = ?", phone).First(&user)
+	return user
+}
+
+func FindUserByEmail(email string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("email = ?", email).First(&user)
+	return user
 }
 
 func CreateUser(user UserBasic) *gorm.DB {
@@ -41,4 +57,9 @@ func CreateUser(user UserBasic) *gorm.DB {
 
 func DeleteUser(user UserBasic) *gorm.DB {
 	return utils.DB.Delete(&user)
+}
+
+func UpdateUser(user UserBasic) error {
+    result := utils.DB.Model(&user).Updates(UserBasic{Name: user.Name, Password: user.Password, Phone: user.Phone, Email: user.Email})
+    return result.Error
 }
